--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -37,7 +37,7 @@ import { books } from "../pages/books.astro";
             <a href="https://www.instagram.com/joshuabutlerphx" target="_blank">Instagram</a>
           </li>
           <li>
-            <a href="mailto:joshua.butler@gmail.com">Email</a>
+            <a href="https://www.facebook.com/profile.php?id=100006913480484">Facebook</a>
           </li>
         </ul>
       </div>
