Update menu options

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -37,11 +37,11 @@
         name="event-type"
         class="border-b border-black bg-[rgba(0,0,0,.02)] px-4 py-2 text-base outline-none w-full h-[40px]"
       >
-        <option value="interview">Media Interview</option>
+        <option value="talk-or-sermon">Event Talk / Sermon</option>
         <option value="podcast">Podcast</option>
         <option value="panel-event">Q﹠A Panel / Event</option>
-        <option value="lecture">Lecture / Sermon</option>
         <option value="retreat">Retreat</option>
+        <option value="interview">Media Interview</option>
         <option value="other">Other</option>
       </select>
     </div>
