Fix sanitize and blockquotes

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -147,6 +147,11 @@ const { title, description, slug } = Astro.props;
     aspect-ratio: 16/9;
   }
 
+  blockquote {
+    padding: 24px;
+    font-style: italic;
+  }
+
   .outer-container {
     @apply mx-auto w-full max-w-[1120px] px-8;
   }
