--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -9,6 +9,79 @@ export const prerender = true;
 
 export const books = [
   {
+    id: "the-party-crasher",
+    date: "2024",
+    postImage: "/images/the-party-crasher-bg.jpg",
+    featuredImage: "/images/the-party-crasher.png",
+    title: "The Party Crasher",
+    description:
+      "The political divide is wider than ever. Each side demands ultimate allegiance that’s incompatible with the Christian faith. The fervency with which so many advocate their political ideals is best described in religious terms. Fortunately, Jesus is the ultimate Party Crasher. And he is disrupting politics-as-usual to invite us to embrace a bold vision capable of redeeming our partisan divide.",
+    options: [
+      {
+        store: "Amazon",
+        url: "https://www.amazon.com/gp/product/B0BXJ55PGR?tag=randohouseinc11082-20",
+      },
+      {
+        store: "Barnes & Noble",
+        url: "https://www.barnesandnoble.com/w/the-party-crasher-joshua-ryan-butler/1143117887;jsessionid=B0AB6A7AA4B83E527203AD73DA138530.prodny_store01-atgap04?ean=9780593600672&st=AFF&2sid=Random%20House%20Inc_8373827_NA&sourceId=AFFRandom%20House%20Inc",
+      },
+      {
+        store: "Bookshop.org",
+        url: "https://bookshop.org/p/books/the-party-crasher-how-jesus-disrupts-politics-as-usual-and-redeems-our-partisan-divide-joshua-ryan-butler/19816119?ean=9780593600672&ref=&source=IndieBound&title=The+Party+Crasher%3A+How+Jesus+Disrupts+Politics+as+Usual+and+Redeems+Our+Partisan+Divide",
+      },
+      {
+        store: "Christianbook",
+        url: "https://www.christianbook.com/crasher-disrupts-politics-redeems-partisan-divide/9780593600672/pd/600672?product_redirect=1&Ntt=9780593600672&item_code=&Ntk=keywords&event=ESRCN|M",
+      },
+      {
+        store: "Books-A-Million",
+        url: "https://www.booksamillion.com/p/9780593600672?cjdata=MXxOfDB8WXww&AID=10747236&PID=8373827&SID=PRH38424DF6D6--9780593600672&cjevent=3ab9e747622211ee818300d40a1cb828",
+      },
+      {
+        store: "Christian Book",
+        url: "https://www.christianbook.com/beautiful-vision-points-unlocks-explains-everything/joshua-butler/9780593445037/pd/3445037?product_redirect=1&Ntt=9780593445037&item_code=&Ntk=keywords&event=ESRCN|M",
+      },
+      {
+        store: "Cokesbury",
+        url: "https://www.cokesbury.com/9780593600672-The-Party-Crasher",
+      },
+      {
+        store: "Powell’s",
+        url: "https://www.powells.com/book/-9780593600672?utm_source=randomhouse&utm_campaign=randomhouse&utm_content=PRH38424DF6D6--9780593600672",
+      },
+    ],
+    testimonials: [
+      {
+        img: "/images/patrick-miller.png",
+        name: "Patrick Miller",
+        bio: "Author of Truth Over Tribe & Pastor at The Crossing",
+        text: `Politics is the new religion. In the first century, no one separated politics and religion. In the 21st, we assume they're divided. But they're not. Josh Butler explores the culture war as a religious war, driven by idols and ideologies, showing how kingdom-centered peacemaking could transform our tribalized moment. Full of pastoral wisdom, The Party Crasher points us toward a vision of public engagement that cuts across party divides, and keeps Jesus's strange, beautiful vision of an enemy-loving, self-sacrificing people at the center.`,
+        bg: "#FFF1EF",
+      },
+      {
+        img: "/images/brenna-blain.png",
+        name: "Brenna Blain",
+        bio: "Bible teacher, author of Can I Say That?",
+        text: `We all give our allegiance to something or someone. Reaching far beyond the pithy platitudes often hurled at those on the Right or the Left, Josh pulls everyone in by acknowledging one simple truth: for many of us, it’s not inherently or naturally Christ. So how do we, with our different political leanings, come to the table of Christ and sit in unity? The Party Crasher serves as a guide to answering this question that all followers of Christ should wrestle with.`,
+        bg: "#FFF1EF",
+      },
+      {
+        img: "/images/jay-kim.png",
+        name: "Jay Kim",
+        bio: "Pastor & Author of Analog Christian",
+        text: `The Party Crasher is a must-read for any and all seeking the way of Jesus amid the fractured mess we find ourselves in today. In our hyper-polarized, us-versus-them culture, the invitation to follow Jesus as an “enemy-loving, fruit-of-the-Spirit-bearing, laying-down-our-lives-for-our-neighbors” reconciler is the only viable path toward transcending the political divides and embodying the Christian vision of peace. “God, give us soft hearts and steel spines”: I love this prayer Josh invites us into in this timely and all-important book.`,
+        bg: "#FFF1EF",
+      },
+      {
+        img: "/images/bre-golden.png",
+        name: "Bre Golden",
+        bio: "Author of Truth Over Tribe & Pastor at The Crossing",
+        text: `The Party Crasher boldly and compassionately addresses the pain and tension political division has wreaked upon our country, churches, and interpersonal relationships. Josh casts a gripping vision for what it looks like to live with conviction in our cultural moment, by exposing the core ideologies of the political religions which call for the allegiance of our hearts, to subvert our bow and pledge loyalty to Jesus as the Ultimate King.`,
+        bg: "#FFF1EF",
+      },
+    ],
+  },
+  {
     id: "beautiful-union",
     date: "2023",
     postImage: "/images/beautiful-union-bg.jpg",
@@ -48,6 +121,36 @@ export const books = [
       {
         store: "Indiebound",
         url: "https://www.indiebound.org/book/9780593445037?aff=penguinrandom",
+      },
+    ],
+    testimonials: [
+      {
+        img: "/images/kristin-knave.png",
+        name: "Kristin Knave",
+        bio: "Creator - SheLovesBible",
+        text: `“What a timely and much-needed book! Whether you are married or single, this is a must-read that will give you clarity on the meaning and purpose of sex.”`,
+        bg: "#FFF1EF",
+      },
+      {
+        img: "/images/john-mark-comer.png",
+        name: "John Mark Comer",
+        bio: "Author - Live No Lies",
+        text: `“One of the books for our time. An essential read. It expertly captures the beauty of orthodox Christian sexuality in a way that is thoughtful, well researched, well written, and deeply compelling.”`,
+        bg: "#F7F0E3",
+      },
+      {
+        img: "/images/albert-tate.png",
+        name: "Albert Tate",
+        bio: "Author - How We Love Matters",
+        text: `“Josh Butler has done it again. He has a way of taking the things I’ve been trying to think through and giving words and clarity to those issues and concerns. Thank you, Josh—you just made my preaching and leading easier.”`,
+        bg: "#EBEDFF",
+      },
+      {
+        img: "/images/jen-pollock-michel.png",
+        name: "Jen Pollock Michel",
+        bio: "Author - In Good Time",
+        text: `“Beautiful Union by Joshua Ryan Butler is a marvel. Its simplicity is its profundity; its truth is its love. I finished these pages in tears, my imagination renewed and expanded to consider the pursuing, self-giving love God has shown to his people through Christ.”`,
+        bg: "#E0F0F3",
       },
     ],
   },
@@ -128,7 +231,7 @@ In this book, we'll pull these bones out into the open to exchange popular caric
     title: "The Pursuing God",
     description: `Is God lost? Many of us feel that way. It's as if God's gone missing, out in the universe somewhere--and we must pick up the hunt, following any trail of breadcrumbs to go find him. We speak of "searching for God,""exploring spirituality," and "finding faith." But what if we have it backward and God is the one pursuing us?What if our job is not to go find God, but to stop running and hiding?Not to discover the light, but step out of the shadows? Not to earnGod's love, but simply receive it? Jesus reveals a God who comes after us, who is on the prowl, hunting down his world for reconciliation. And the question we're left withis not whether we've been good enough, jumped high enough, or sought hard enough... The question is: "Do we want to be found?"`,
     options: [
-    {
+      {
         store: "Amazon",
         url: "https://www.amazon.com/Pursuing-God-Reckless-Irrational-Obsessed/dp/0718021606",
       },
