--- a/src/components/BookItem.astro
+++ b/src/components/BookItem.astro
@@ -1,5 +1,4 @@
 ---
-import WhereToBuy from "./WhereToBuy.astro";
 const { id, title, description, postImage, options } = Astro.props;
 ---
 
@@ -8,6 +7,6 @@ const { id, title, description, postImage, options } = Astro.props;
   <figure>
     <img src={postImage} />
   </figure>
-  <p>{description}</p>
-  <WhereToBuy options={options} />
+  <!-- <p>{description}</p> -->
+  <a href={`${Astro.url.origin}/books/${id}`}>Learn More</a>
 </section>
