--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,6 +56,7 @@ const { title, description, slug } = Astro.props;
     />
   </head>
   <body class="text-2xl">
+    <slot name="bg" />
     <Banner />
     <header>
       <NavBar />
@@ -71,7 +72,7 @@ const { title, description, slug } = Astro.props;
 </html>
 <style is:global>
   :root {
-    --bg-alt: #F7F0E3;
+    --bg-alt: #FAF6EF;
     --bg-main: #fff;
     --bg-light-purple: #f2f3fc;
     --bg-dark: #000;
@@ -79,7 +80,8 @@ const { title, description, slug } = Astro.props;
     --text-gray: #333333;
     --text-default: #000;
     --gold: rgb(209, 161, 95);
-    --light-blue: #EBEDFF;
+    --light-blue: #ebedff;
+    --light-blue-2: rgba(30, 117, 175, 0.05);
   }
 
   html {
