--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Book from "../components/Book.astro";
 import Callout from "../components/Callout.astro";
 import HeroSection from "../components/HeroSection.astro";
+import MyBooks from "../components/MyBooks.astro";
 import RecentPosts from "../components/RecentPosts.astro";
 import SpeakingEngagements from "../components/SpeakingEngagements.astro";
 import Testimonials from "../components/Testimonials.astro";
@@ -26,44 +26,7 @@ const description =
       <Callout />
     </section>
     <Testimonials testimonials={testimonials?.slice(0,2)} title={books[0].title} />
-    <section class="relative h-[750px] md:h-[680px]">
-      <div class="mb-8 outer-container">
-        <h4 class="mb-12">More Books</h4>
-        <p class="max-w-[55ch]">
-          I love shifting paradigms, to help people who wrestle with tough
-          topics of the Christian faith by confronting popular caricatures and
-          replacing them with the real thing.
-        </p>
-      </div>
-      <div
-        class="absolute w-full bottom-0 overflow-auto pl-[2rem] lg:pl-[calc((100vw_-_(1120px_-_4rem))_/_2)] pt-40"
-      >
-        <ul class="inline-flex gap-20 items-center w-full">
-          {
-            books.map((book) => (
-              <li class="block shrink-0">
-                <a href={`/books/${book.id}`} class="block">
-                  <Book {...book} />
-                </a>
-              </li>
-            ))
-          }
-          <li class="pr-10">
-            <a
-              href="/books"
-              class="grid gap-4 place-items-center text-xl font-body"
-            >
-              <span
-                class="w-[48px] h-[48px] rounded-full border border-[var(--black)] flex items-center justify-center -rotate-90"
-              >
-                <img width="12px" height="12px" src="/images/down-arrow.svg" />
-              </span>
-              <span class="whitespace-nowrap text-center">Learn More</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
+    <MyBooks books={books} />
     <section class="py-[140px] grid md:grid-cols-2 gap-20 outer-container">
       <RecentPosts posts={recentPosts} />
       <SpeakingEngagements />
