--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -16,6 +16,7 @@ export const books = [
     title: "The Party Crasher",
     description:
       "The political divide is wider than ever. Each side demands ultimate allegiance that’s incompatible with the Christian faith. The fervency with which so many advocate their political ideals is best described in religious terms. Fortunately, Jesus is the ultimate Party Crasher. And he is disrupting politics-as-usual to invite us to embrace a bold vision capable of redeeming our partisan divide.",
+    pdf: "the-party-crasher-sneak-peak.pdf",
     options: [
       {
         store: "Amazon",
@@ -89,6 +90,7 @@ export const books = [
     title: "Beautiful Union",
     description:
       "It's time to better understand God’s redemptive vision for humanity's greatest obsession. In this bold book, award-winning author Joshua Ryan Butler helps listeners rediscover the beauty of the traditional Christian theology of sex by framing it within the greater things it is designed to point to.",
+    pdf: "BeautifulUnion_SP.pdf",
     options: [
       {
         store: "Amazon",
