--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,12 @@ const description =
     <section class="outer-container">
       <Callout />
     </section>
-    <Testimonials testimonials={testimonials?.slice(0,2)} title={books[0].title} />
+    <section class="outer-container">
+      <Testimonials
+        testimonials={testimonials?.slice(0, 2)}
+        title={books[0].title}
+      />
+    </section>
     <MyBooks books={books} />
     <section class="py-[140px] grid md:grid-cols-2 gap-20 outer-container">
       <RecentPosts posts={recentPosts} />
