Revert "Merge pull request #2 from benadam11/book-update"
This reverts commit 26aedf0a0d5c5d1866de2186081850bbb30e6508, reversing
changes made to 61572893f5d7f6d9d7d55261bf615e950b00fe91.

--- a/src/components/BookItem.astro
+++ b/src/components/BookItem.astro
@@ -1,4 +1,5 @@
 ---
+import WhereToBuy from "./WhereToBuy.astro";
 const { id, title, description, postImage, options } = Astro.props;
 ---
 
@@ -7,6 +8,6 @@ const { id, title, description, postImage, options } = Astro.props;
   <figure>
     <img src={postImage} />
   </figure>
-  <!-- <p>{description}</p> -->
-  <a href={`${Astro.url.origin}/books/${id}`}>Learn More</a>
+  <p>{description}</p>
+  <WhereToBuy options={options} />
 </section>
