Fix meta description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const postData = await getPosts();
 const recentPosts = postData[0].recentPosts;
 const title = "Joshua Ryan Butler";
 const description =
-  "I’m the author of Beautiful Union (and a few other books). I love shifting paradigms, to help people who wrestle with tough topics of the Christian faith by confronting popular caricatures and replacing them with the real thing.";
+  "I’m the author of The Party Crasher (and a few other books). I love shifting paradigms, to help people who wrestle with tough topics of the Christian faith by confronting popular caricatures and replacing them with the real thing.";
 ---
 
 <Layout title={title} description={description} slug="home">
