--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -76,8 +76,21 @@ export const books = [
       {
         img: "/images/bre-golden.png",
         name: "Bre Golden",
-        bio: "Author of Truth Over Tribe & Pastor at The Crossing",
+        bio: "Pastor of Community Care at Park Hill Church",
         text: `The Party Crasher boldly and compassionately addresses the pain and tension political division has wreaked upon our country, churches, and interpersonal relationships. Josh casts a gripping vision for what it looks like to live with conviction in our cultural moment, by exposing the core ideologies of the political religions which call for the allegiance of our hearts, to subvert our bow and pledge loyalty to Jesus as the Ultimate King.`,
+        bg: "#FFF1EF",
+      },
+      {
+        img: "/images/aj-swoboda.png",
+        name: "A.J. Swoboda",
+        bio: "Associate professor at Bushnell University & author of After Doubt",
+        text: `The Party Crasher confronts and exposes the idols we’ve too generously
+harbored in our hearts. It is, to be sure, a wildly uncomfortable read. In the
+Pentecostal movement, we call it “having your mail read.” But goodness
+gracious: this book is wildly needed right now. It challenges our false
+religions, idolatrous ideologies, and misappropriated loves with Christ’s
+expansive kingdom. Josh has written a book that should shape the church
+for years to come. Highly recommended.`,
         bg: "#FFF1EF",
       },
     ],
