--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -14,6 +14,7 @@ export const books = [
     postImage: "/images/the-party-crasher-bg.jpg",
     featuredImage: "/images/the-party-crasher.png",
     title: "The Party Crasher",
+    trailer: "https://www.youtube.com/embed/kQCDq7N5HZc?si=hR_1b4BA-_3FyF2I",
     description:
       "The political divide is wider than ever. Each side demands ultimate allegiance that’s incompatible with the Christian faith. The fervency with which so many advocate their political ideals is best described in religious terms. Fortunately, Jesus is the ultimate Party Crasher. And he is disrupting politics-as-usual to invite us to embrace a bold vision capable of redeeming our partisan divide.",
     pdf: "the-party-crasher-sneak-peak.pdf",
