--- a/src/pages/books/[book].astro
+++ b/src/pages/books/[book].astro
@@ -23,6 +23,7 @@ const {
   testimonials = [],
   otherBooks = [],
   pdf,
+  trailer,
 } = Astro.props;
 ---
 
@@ -46,6 +47,21 @@ const {
           <p>{description}</p>
         </div>
         {pdf && <Download pdf={pdf} />}
+        {
+          trailer && (
+            <div>
+            <h4 class="text-lg mb-4">Trailer</h4>
+            <iframe
+              width="560"
+              height="315"
+              src={trailer}
+              title="YouTube video player"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            />
+          </div>
+          )
+        }
         <WhereToBuy options={options} />
       </div>
     </div>
