Add new fields for party crasher

--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -18,6 +18,16 @@ export const books = [
     description:
       "The political divide is wider than ever. Each side demands ultimate allegiance that’s incompatible with the Christian faith. The fervency with which so many advocate their political ideals is best described in religious terms. Fortunately, Jesus is the ultimate Party Crasher. And he is disrupting politics-as-usual to invite us to embrace a bold vision capable of redeeming our partisan divide.",
     pdf: "the-party-crasher-sneak-peak.pdf",
+    preorderLink: "https://form.jotform.com/240134563753959",
+    preorderBulkLink: "https://form.jotform.com/240134881589969",
+    resources: [
+      {
+        id: "a-christian-political-pledge",
+        name: "A Christian Political Commitment",
+        type: "download",
+        pdf: "christian-political-pledge.pdf",
+      },
+    ],
     options: [
       {
         store: "Amazon",
