Add resources page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -158,6 +158,10 @@ const { title, description, slug } = Astro.props;
     @apply mx-auto w-full max-w-[1120px] px-8;
   }
 
+  .inner-container {
+    @apply mx-auto w-full max-w-[960px] px-8;
+  }
+
   .dot-bg {
     background: radial-gradient(
           2px 2px at 50% 50%,
